Starting work on hull serializing, more refactors.